# oceanum-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-and-test.yml  pypi-publish.yml
src/oceanum_mcp/: __init__.py  __main__.py  app.py  cli.py
src/oceanum_mcp/common/: __init__.py  auth.py  client.py  config.py  exceptions.py  formatting.py
src/oceanum_mcp/servers/: __init__.py
src/oceanum_mcp/servers/combined/: __init__.py  server.py
src/oceanum_mcp/servers/datamesh/: __init__.py  server.py
src/oceanum_mcp/servers/storage/: __init__.py  server.py
tests/: conftest.py  test_cli.py  test_http_mode.py
tests/test_common/: test_auth.py  test_client.py  test_config.py  test_formatting.py
tests/test_servers/: test_datamesh.py  test_storage.py
