[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oceanum-mcp"
version = "0.2.0"
description = "MCP servers for the Oceanum platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0,<4",
    # <2 pin guards the private Connector._stage_request/Session usage in the
    # datamesh server's staging helper (no public staging API in oceanum 1.x).
    "oceanum>=1.1,<2",
    # oceanum requires zarr<3, and zarr 2.x breaks at runtime with
    # numcodecs>=0.16 (blosc.cbuffer_sizes removed); oceanum does not pin this.
    "numcodecs<0.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
oceanum-mcp = "oceanum_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/oceanum_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
